Production-ready AI Document Processor with comprehensive documentation - Complete Node.js/Express API with Bearer token authentication - Docker containerization with health checks - Support for PDF processing with OpenAI/Anthropic AI - Advanced prompt formatting with embedded delimiters - JSON parsing capabilities - Comprehensive documentation - Rate limiting and security features - Production logging and error handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,9 @@ services:
       - LOG_LEVEL=info
     env_file:
       - .env
-    volumes:
-      - ./logs:/usr/src/app/logs
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3600/health"]
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3600/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
       interval: 30s
       timeout: 10s
       retries: 3
